force-app/main/default/objects/HIRA__c/HIRA__c.object-meta.xml
<CustomObject>
    <description>Hazard Identification and Risk Assessment records for EPC project activities, capturing controls and residual risk.</description>
    <label>HIRA</label>
    <nameField>
        <displayFormat>HIRA-{00000}</displayFormat>
        <label>HIRA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HIRAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>