force-app/main/default/objects/HIRA__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>