force-app/main/default/objects/HIRA__c/fields/Control_Measures__c.field-meta.xml
<CustomField>
    <fullName>Control_Measures__c</fullName>
    <label>Control Measures</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>