force-app/main/default/objects/HIRA__c/fields/Hazard__c.field-meta.xml
<CustomField>
    <fullName>Hazard__c</fullName>
    <label>Hazard Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>