force-app/main/default/objects/HIRA__c/fields/Residual_Risk__c.field-meta.xml
<CustomField>
    <fullName>Residual_Risk__c</fullName>
    <label>Residual Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Extreme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>